Added highscore system & small fixes
Small fixes: cleanedup code a little, fixed some small bugs.

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -14,11 +14,23 @@ body {
     background-size: cover;
 }
 
+score {
+    padding: 10px;
+}
+
+
+
 body * {
     position: absolute;
     display: block;
     box-sizing: border-box;
     background-repeat: no-repeat;
+}
+
+hiscore {
+    position: relative;
+    padding: 10px;
+    text-align: right;
 }
 
 splash {
