--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -14,17 +14,15 @@ body {
     background-size: cover;
 }
 
-score {
-    padding: 10px;
-}
-
-
-
 body * {
     position: absolute;
     display: block;
     box-sizing: border-box;
     background-repeat: no-repeat;
+}
+
+score {
+    padding: 10px;
 }
 
 hiscore {
@@ -33,22 +31,42 @@ hiscore {
     text-align: right;
 }
 
-splash {
+text {
     font-size:2em;
     cursor: pointer;
     width:500px;
-    height:100px;
+    height:50px;
     margin-top:calc(50vh - 50px);
     margin-left:calc(50vw - 250px);
     text-align:center;
 }
 
-ball {
+text2 {
+    font-size:2em;
+    cursor: pointer;
+    width:500px;
+    height:50px;
+    margin-top:calc(55vh - 55px);
+    margin-left:calc(50vw - 250px);
+    text-align:center;
+}
+
+back {
+    font-size:2em;
+    cursor: pointer;
+    width:500px;
+    height:50px;
+    margin-top:calc(30vh - 30px);
+    margin-left:calc(50vw - 250px);
+    text-align:center;
+}
+
+meteor {
     background-image: url(../images/meteor.png);
     width:75px; height:130px;
 }
 
-paddle {
+player {
     background-image: url(../images/paddle2.png);
     width:100px; height:25px;
 }
